Updating app settings

--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -32,7 +32,7 @@ jobs:
         dotnet user-secrets set "ConnectionStrings:SekibanBlob" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Default:CosmosDatabase" "GithubActions"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:CosmosDbDatabase" "GithubActions"
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:CosmosDatabase" "GithubActions"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
         dotnet user-secrets set "Sekiban:Default:Aws:DynamoRegion" "us-west-1"
@@ -80,7 +80,7 @@ jobs:
         dotnet user-secrets set "ConnectionStrings:SekibanBlob" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Default:CosmosDatabase" "GithubActions"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:CosmosDbDatabase" "GithubActions"
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:CosmosDatabase" "GithubActions"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
         dotnet user-secrets set "Sekiban:Default:Aws:DynamoRegion" "us-west-1"
@@ -131,7 +131,7 @@ jobs:
         dotnet user-secrets set "ConnectionStrings:SekibanBlob" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Default:CosmosDatabase" "GithubActions"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:CosmosDbDatabase" "GithubActions"
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:CosmosDatabase" "GithubActions"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
         dotnet user-secrets set "Sekiban:Default:Aws:DynamoRegion" "us-west-1"
@@ -186,7 +186,7 @@ jobs:
         dotnet user-secrets set "ConnectionStrings:SekibanBlob" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Default:CosmosDatabase" "GithubActions"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:CosmosDbDatabase" "GithubActions"
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:CosmosDatabase" "GithubActions"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
         dotnet user-secrets set "Sekiban:Default:Aws:DynamoRegion" "us-west-1"
@@ -234,7 +234,7 @@ jobs:
         dotnet user-secrets set "ConnectionStrings:SekibanBlob" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Default:CosmosDatabase" "GithubActions"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:CosmosDbDatabase" "GithubActions"
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:CosmosDatabase" "GithubActions"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
         dotnet user-secrets set "Sekiban:Default:Aws:DynamoRegion" "us-west-1"
@@ -282,7 +282,7 @@ jobs:
         dotnet user-secrets set "ConnectionStrings:SekibanBlob" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Default:CosmosDatabase" "GithubActions"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:CosmosDbDatabase" "GithubActions"
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:CosmosDatabase" "GithubActions"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
         dotnet user-secrets set "Sekiban:Default:Aws:DynamoRegion" "us-west-1"
@@ -330,7 +330,7 @@ jobs:
         dotnet user-secrets set "ConnectionStrings:SekibanBlob" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Default:CosmosDatabase" "GithubActions"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:CosmosDbDatabase" "GithubActions"
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:CosmosDatabase" "GithubActions"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
         dotnet user-secrets set "Sekiban:Default:Aws:DynamoRegion" "us-west-1"
