--- a/internalUsages/FeatureCheck.WebApi.Dynamo/appsettings.json
+++ b/internalUsages/FeatureCheck.WebApi.Dynamo/appsettings.json
@@ -7,31 +7,33 @@
   },
   "Sekiban": {
     "Default": {
-      "DynamoDbRegion": "ap-northeast-1",
-      "AwsAccessKeyId": "[Set your dynamo db access id here]",
-      "AwsAccessKey": "[Set your dynamo db access key here]",
-      "DynamoDbItemsTable": "jjlt_items",
-      "DynamoDbEventsTable": "jjlt_events",
-      "DynamoDbItemsTableDissolvable": "jjlt_d_items",
-      "DynamoDbEventsTableDissolvable": "jjlt_d_events",
-      "S3BucketName": "jjlt-s3",
-      "S3Region": "us-west-1",
-      "Aggregates": {
-        "UseHybridDefault": true,
-        "TakeSnapshotDefault": true,
-        "SnapshotFrequencyDefault": 80,
-        "SnapshotOffsetDefault": 15,
-        "UseUpdateMarker": true,
-        "SingleAggregateExceptions": [
-          {
-            "AggregateClassName": "Client",
-            "MakeSnapshots": true,
-            "UseHybrid": false,
-            "SnapshotFrequency": 69,
-            "SnapshotOffset": 10,
-            "UseUpdateMarker": true
-          }
-        ]
+      "AWS": {
+        "DynamoRegion": "ap-northeast-1",
+        "AccessKeyId": "[Set your dynamo db access id here]",
+        "AccessKey": "[Set your dynamo db access key here]",
+        "DynamoItemsTable": "jjlt_items",
+        "DynamoEventsTable": "jjlt_events",
+        "DynamoItemsTableDissolvable": "jjlt_d_items",
+        "DynamoEventsTableDissolvable": "jjlt_d_events",
+        "S3BucketName": "jjlt-s3",
+        "S3Region": "us-west-1",
+        "Aggregates": {
+          "UseHybridDefault": true,
+          "TakeSnapshotDefault": true,
+          "SnapshotFrequencyDefault": 80,
+          "SnapshotOffsetDefault": 15,
+          "UseUpdateMarker": true,
+          "SingleAggregateExceptions": [
+            {
+              "AggregateClassName": "Client",
+              "MakeSnapshots": true,
+              "UseHybrid": false,
+              "SnapshotFrequency": 69,
+              "SnapshotOffset": 10,
+              "UseUpdateMarker": true
+            }
+          ]
+        }
       }
     }
   },
