--- a/internalUsages/FeatureCheck.WebApi/appsettings.json
+++ b/internalUsages/FeatureCheck.WebApi/appsettings.json
@@ -7,10 +7,14 @@
   },
   "Sekiban": {
     "Default": {
-      "BlobConnectionString": "[your blob connection string]",
-      "CosmosDbConnectionString": "[Set your cosmos connection string]",
-      "CosmosDbDatabase": "CustomerDb"
+      "Azure": {
+        "CosmosDatabase": "CustomerDb"
+      }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SekibanCosmos": "[Set your cosmos connection string]",
+    "SekibanBlob": "[Set your cosmos connection string]"
+  }
 }
