--- a/internalUsages/MultiTenant.WebApi/appsettings.json
+++ b/internalUsages/MultiTenant.WebApi/appsettings.json
@@ -7,10 +7,14 @@
   },
   "Sekiban": {
     "Default": {
-      "BlobConnectionString": "[your blob connection string]",
-      "CosmosDbConnectionString": "[Set your cosmos db connection string]",
-      "CosmosDbDatabase": "LocalTesting"
+      "Azure": {
+        "CosmosDatabase": "LocalTesting"
+      }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SekibanCosmos": "[Set your cosmos db connection string]",
+    "SekibanBlob": "[your blob connection string]"
+  }
 }
