--- a/tools/ConvertAndCopyCosmosItems/appsettings.json
+++ b/tools/ConvertAndCopyCosmosItems/appsettings.json
@@ -8,14 +8,14 @@
   "Sekiban": {
     "Contexts": {
       "Default": {
-        "BlobConnectionString": "[your blob connection string]",
-        "CosmosDbConnectionString": "[Set your cosmos db connection string here]",
+        "BlobConnectionStringName": "SekibanBlobDefault",
+        "CosmosConnectionStringName": "SekibanCosmosDefault",
         "CosmosDbDatabase": "[Set your cosmos db database here]",
         "LegacyPartitions": false
       },
       "ConvertDestination": {
-        "BlobConnectionString": "[your blob connection string]",
-        "CosmosDbConnectionString": "[Set your cosmos db connection string here]",
+        "BlobConnectionStringName": "SekibanBlobConvertDestination",
+        "CosmosConnectionStringName": "SekibanCosmosConvertDestination",
         "CosmosDbDatabase": "[Set your cosmos db database here]",
         "LegacyPartitions": false
       }
@@ -26,5 +26,11 @@
         "SlidingExpirationMinutes": 10000
       }
     }
+  },
+  "ConnectionStrings": {
+    "SekibanCosmosDefault": "[Set your cosmos db connection string here]",
+    "SekibanBlobDefault": "[Set your blob connection string here]",
+    "SekibanBlobConvertDestination": "[Set your cosmos db connection string here]",
+    "SekibanCosmosConvertDestination": "[Set your blob connection string here]"
   }
 }
