fix test run settings

--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -84,10 +84,10 @@ jobs:
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
         dotnet user-secrets set "Sekiban:Default:Aws:DynamoRegion" "us-west-1"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTable" "jjga_items"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTable" "jjga_events"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTableDissolvable" "jjga_d_items"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTableDissolvable" "jjga_d_events"
+        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTable" "8_jjga_items"
+        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTable" "8_jjga_events"
+        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTableDissolvable" "8_jjga_d_items"
+        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTableDissolvable" "8_jjga_d_events"
         dotnet user-secrets set "Sekiban:Default:Aws:S3Region" "us-west-1"
         dotnet user-secrets set "Sekiban:Default:Aws:S3BucketName" "jjga-s3"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
@@ -238,10 +238,10 @@ jobs:
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
         dotnet user-secrets set "Sekiban:Default:Aws:DynamoRegion" "us-west-1"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTable" "jjga_items"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTable" "jjga_events"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTableDissolvable" "jjga_d_items"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTableDissolvable" "jjga_d_events"
+        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTable" "8_jjga_items"
+        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTable" "8_jjga_events"
+        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTableDissolvable" "8_jjga_d_items"
+        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTableDissolvable" "8_jjga_d_events"
         dotnet user-secrets set "Sekiban:Default:Aws:S3Region" "us-west-1"
         dotnet user-secrets set "Sekiban:Default:Aws:S3BucketName" "jjga-s3"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
@@ -334,10 +334,10 @@ jobs:
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
         dotnet user-secrets set "Sekiban:Default:Aws:DynamoRegion" "us-west-1"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTable" "jjga_items"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTable" "jjga_events"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTableDissolvable" "jjga_d_items"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTableDissolvable" "jjga_d_events"
+        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTable" "8_jjga_items"
+        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTable" "8_jjga_events"
+        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTableDissolvable" "8_jjga_d_items"
+        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTableDissolvable" "8_jjga_d_events"
         dotnet user-secrets set "Sekiban:Default:Aws:S3Region" "us-west-1"
         dotnet user-secrets set "Sekiban:Default:Aws:S3BucketName" "jjga-s3"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
