--- a/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Cosmos/appsettings.Development.json
+++ b/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Cosmos/appsettings.Development.json
@@ -5,11 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Sekiban": {
+  "Sekiban" : {
     "Default": {
-      "CosmosDbConnectionString": "[Set your cosmos db connection string]",
-      "BlobConnectionString": "[Set your blob connection string here. (not necessary for just running the sample)]",
-      "CosmosDbDatabase": "GetStartedDb"
-    }
+      "Azure":
+      {
+        "Test" : "Test"
+      }
+    } 
+  },
+  "ConnectionStrings": {
+    "SekibanCosmos": "[Set your cosmos db connection string]",
+    "SekibanBlob": "[Set your blob connection string here. (not necessary for just running the sample)]"
   }
 }
