--- a/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Dynamo/appsettings.Development.json
+++ b/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Dynamo/appsettings.Development.json
@@ -7,13 +7,15 @@
   },
   "Sekiban": {
     "Default": {
-      "DynamoDbRegion": "us-west-1",
-      "AwsAccessKeyId": "[Set your dynamo db access id here]",
-      "AwsAccessKey": "[Set your dynamo db access key here]",
-      "DynamoDbItemsTable": "bookborrowing_items",
-      "DynamoDbEventsTable": "bookborrowing_events",
-      "S3BucketName": "jjlt-s3",
-      "S3Region": "us-west-1"
+      "Aws" : {
+        "DynamoRegion": "us-west-1",
+        "AccessKeyId": "[Set your dynamo db access id here]",
+        "AccessKey": "[Set your dynamo db access key here]",
+        "DynamoItemsTable": "bookborrowing_items",
+        "DynamoEventsTable": "bookborrowing_events",
+        "S3BucketName": "jjlt-s3",
+        "S3Region": "us-west-1"
+      }
     }
   }
 }
