--- a/src/Sekiban.Core/Sekiban.Core.csproj
+++ b/src/Sekiban.Core/Sekiban.Core.csproj
@@ -6,13 +6,13 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>Sekiban.Core</PackageId>
-        <Version>0.16.0</Version>
+        <Version>0.16.1</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Core</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>0.16.0</PackageVersion>
-        <Description>Improved DI Initialization</Description>
+        <PackageVersion>0.16.1</PackageVersion>
+        <Description>Bug fix from 0.16.0 casting to ConfigurationRoot</Description>
         <AssemblyName>Sekiban.Core</AssemblyName>
         <RootNamespace>Sekiban.Core</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
