Updated document and tutorials

--- a/Samples/Tutorials/2.SekibanEventSourcingBasics/SekibanEventSourcingBasics.Cosmos.Web/appsettings.Development.json
+++ b/Samples/Tutorials/2.SekibanEventSourcingBasics/SekibanEventSourcingBasics.Cosmos.Web/appsettings.Development.json
@@ -5,16 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-//  "Sekiban": {
-//    "Default": {
-//     // "BlobConnectionString": "[Set your blob connection string here. (not necessary for just running the sample)]",
-//     // "CosmosDbConnectionString": "[Set your CosmosDb endpoint url here.]",
-//      "CosmosDbDatabase": "SekibanBasics"
-//    }
-//  },
   "ConnectionStrings": {
     "SekibanCosmos" : "[set your cosmos connection strings]",
-    "blob" : "UseDevelopment=true"
-    "sqldb2" : ""
+    "SekibanBlob" : "UseDevelopment=true"
   }
 }
