--- a/src/Sekiban.Core/Sekiban.Core.csproj
+++ b/src/Sekiban.Core/Sekiban.Core.csproj
@@ -6,12 +6,12 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>Sekiban.Core</PackageId>
-        <Version>0.16.1</Version>
+        <Version>0.16.2</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Core</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>0.16.1</PackageVersion>
+        <PackageVersion>0.16.2</PackageVersion>
         <Description>Bug fix from 0.16.0 casting to ConfigurationRoot</Description>
         <AssemblyName>Sekiban.Core</AssemblyName>
         <RootNamespace>Sekiban.Core</RootNamespace>
@@ -22,10 +22,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
         <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1"/>
         <PackageReference Include="LanguageExt.Core" Version="4.4.7"/>
         <PackageReference Include="MediatR" Version="12.2.0"/>
-        <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2"/>
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0"/>
@@ -35,15 +35,4 @@
         <PackageReference Include="SharpZipLib" Version="1.4.2"/>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
-
-    <ItemGroup>
-        <Reference Include="Microsoft.AspNetCore.Http">
-            <HintPath>..\..\..\..\..\..\..\..\usr\local\share\dotnet\arm64\shared\Microsoft.AspNetCore.App\6.0.3\Microsoft.AspNetCore.Http.dll</HintPath>
-        </Reference>
-        <Reference Include="Microsoft.AspNetCore.Http.Abstractions">
-            <HintPath>..\..\..\..\..\..\..\..\usr\local\share\dotnet\arm64\shared\Microsoft.AspNetCore.App\6.0.3\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
-        </Reference>
-    </ItemGroup>
-
-
 </Project>
