Fix namespace and add Azure Blob support

--- a/internalUsages/FeatureCheck.WebApi.AspireTest/appsettings.Development.json
+++ b/internalUsages/FeatureCheck.WebApi.AspireTest/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "AspireCosmos": "[put your connection string here or user secrets]"
+    "AspireCosmos": "[put your connection string here or user secrets]",
+    "AspireBlob": "[put your connection string here or user secrets]"
   }
 }
