Update package versions and refactor Weather page to Users page
Code changes involve updating several package references to newer versions, including Sekiban.Core, Sekiban.Web, and OpenTelemetry packages. The Weather page was refactored to Users, with corresponding changes in the .razor files, Navbar, and WeatherApiClient.cs. Also, a reference to AspireAndSekibanSample.Domain.csproj was added in AspireAndSekibanSample.Web.csproj. Changes were also made for Sekiban related settings in the ApiService's Program.cs file.

--- a/Samples/Tutorials/AspireAndSekibanSample/AspireAndSekibanSample.Web/AspireAndSekibanSample.Web.csproj
+++ b/Samples/Tutorials/AspireAndSekibanSample/AspireAndSekibanSample.Web/AspireAndSekibanSample.Web.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AspireAndSekibanSample.Domain\AspireAndSekibanSample.Domain.csproj" />
     <ProjectReference Include="..\AspireAndSekibanSample.ServiceDefaults\AspireAndSekibanSample.ServiceDefaults.csproj" />
   </ItemGroup>
 
