Refactor appsettings.json structure

--- a/tools/ConvertAndCopyCosmosItems/appsettings.json
+++ b/tools/ConvertAndCopyCosmosItems/appsettings.json
@@ -8,16 +8,19 @@
   "Sekiban": {
     "Contexts": {
       "Default": {
-        "BlobConnectionStringName": "SekibanBlobDefault",
-        "CosmosConnectionStringName": "SekibanCosmosDefault",
-        "CosmosDbDatabase": "[Set your cosmos db database here]",
-        "LegacyPartitions": false
+        "Azure": {
+          "BlobConnectionStringName": "SekibanBlobDefault",
+          "CosmosConnectionStringName": "SekibanCosmosDefault",
+          "CosmosDatabase": "[Set your cosmos db database here]"
+        }
       },
       "ConvertDestination": {
-        "BlobConnectionStringName": "SekibanBlobConvertDestination",
-        "CosmosConnectionStringName": "SekibanCosmosConvertDestination",
-        "CosmosDbDatabase": "[Set your cosmos db database here]",
-        "LegacyPartitions": false
+        "Azure": {
+          "BlobConnectionStringName": "SekibanBlobConvertDestination",
+          "CosmosConnectionStringName": "SekibanCosmosConvertDestination",
+          "CosmosDatabase": "[Set your cosmos db database here]",
+          "LegacyPartitions": false
+        }
       }
     },
     "MemoryCache": {
