--- a/internalUsages/FeatureCheck.WebApi.Postgres/appsettings.Development.json
+++ b/internalUsages/FeatureCheck.WebApi.Postgres/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SekibanPostgres": "[Set Your Postgres Connection String. It must include database name]",
+    "SekibanBlob": "[Set Your Blob Storage Connection String. This is for snapshots, for simple test, it will be ignored]"
   }
 }
